--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,8 @@
   "action": {
     "default_popup": "extension.html",
     "default_title": "All Emojis"
+  },
+  "icons": {
+    "128": "icon.png"
   }
 }
