adding icons for different sizes

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,8 @@
     "default_title": "All Emojis"
   },
   "icons": {
-    "128": "icon.png"
+    "128": "icon-128x128.png",
+    "48" : "icon-48x48.png",
+    "16" : "icon-16x16.png"
   }
 }
